# journalviewer

./: CMakeLists.txt  JournalGrid.qml  Main.qml  NavigationMenu.qml  journalfields.cpp  journalfields.h  journalinterface.cpp  journalinterface.h  journalmodel.cpp  journalmodel.h  journalview.cpp  journalview.h  main.cpp  navmodel.cpp  navmodel.h
